# AntElligence

./: .gitignore  AntElligence.spec  AntElligenceEngine.spec  CHANGELOG.md  Error.t  README.md  environment.yaml  error_input  install.bat  install.sh  install_cpp.bat  install_py.bat  install_py_cpp.bat  results\game_results.csv  spec-file.txt  test.bat
res/: Engine.md
results/: game_results.csv  game_results_depth_4.csv  optuna_optimization_results.csv
src/: BoardModel.py  Engine.cpp  a.out  best_weights.txt  best_weights_232.txt  engine.py  engineInterface.py  exe_tester.py  main  main.cpp  optuna_opt.py  optuna_weight_optimization.db  ours_tester.py  test.txt  testEngine.py  tester.py  tester_alt.py  time_tester.py
src/agents/: mcts.py  minimax.py  oracle.py  random_strat.py  strategy.py
src/agents_cpp/: agent.h  minimax.h  random.h
src/alphazero/: AlphaZeroHive(2).ipynb  AlphaZeroHive.ipynb  AlphaZeroImplementation.ipynb  Connect4.ipynb  Copia_di_AlphaZeroImplementation (1).ipynb  Copia_di_AlphaZeroImplementation.ipynb  MCTS.cpp  PlayGame.cpp  ResNetModel.cpp  Untitled.ipynb  alphazerohive(1).py  alphazerohive(2).py  cpp  idea.md
src/alphazero/.ipynb_checkpoints/: AlphaZeroImplementation-checkpoint.ipynb
src/alphazero/cpp/: CMakeLists.txt  Makefile  a.out  duel.cpp  interface_reduced.cpp  main.cpp  self-play.cpp  test.cpp
src/alphazero/cpp/engine/: action.cpp  action.h  board.cpp  board.h  board_bitset.h  direction.h  embadded_board.cpp  enums.cpp  enums.h  gameboard.cpp  gameboard.h
src/alphazero/cpp/mcts/: args.h  mcts.cpp  mcts.h  node.cpp  node.h
src/correct_cpp/: engine.cpp
src/correct_cpp/agents/: agent.h
src/correct_cpp/engine/: board.cpp  board.h  direction.cpp  engine_interface.h  gameboard.h  position.cpp
src/cpp/: 3  engine.cpp  engine.h  main  main.cpp  strategy.h
src/cpp/agents/: deep.h  minimax.cpp  minimax.h  random.h
src/cpp/engine/: action.cpp  action.h  board.cpp  board.h  direction.cpp  direction.h  engine_interface.cpp  enums.cpp  enums.h  gameboard.cpp  gameboard.h  piece.cpp  piece.h  position.cpp  position.h
src/cpp_and_py/: BoardModel.py  engine.py  engineInterface.py
src/cpp_and_py/agents/: mcts.py  minimax.py  oracle.py  random_strat.py  strategy.py
src/cpp_and_py/engine_cpp/: board.cpp  board.h  direction.cpp  direction.h  engine.cpp  position.h
src/cpp_and_py/game_logic/: enums.py  game.py
src/cpp_minimax/: Dockerfile  Makefile  TT.cpp  TT.h  actions_order.cpp  better_board_eval.cpp  board_eval.cpp  engine.cpp  engine.h  game_rule_reduced.cpp  main.cpp  minimax.cpp  minimax.h  minimaxAgent.cpp  minimaxAgent.h  minimaxAgent.py  minimax_tt.cpp  minimax_tt.h.old  self_play  self_play.cpp  weights.txt
src/cpp_minimax/cpp/: interface_reduced.cpp
src/cpp_minimax/cpp/engine/: board.cpp  board.h  direction.h  embadded_board.cpp  embadded_board.h  enums.h
src/cpp_minimax/cpp/mcts/: mcts.cpp
src/cpp_minimax/engine/: action.cpp  action.h  board.cpp  board.h  board_bitset.cpp  board_bitset.h  board_score.cpp  board_score_mzinga.cpp  direction.h  dynamic_eval.cpp  dynamic_eval.h  enums.cpp  enums.h  gameboard.cpp  gameboard.h  piece.cpp  piece.h  position.cpp  position.h  weights.cpp  weights.h  weights.xml  weights_mzinga.txt
src/cpp_minimax/test/: test-1.cpp  test-2.cpp  test-3.cpp
src/engine_alphabeta/: Agent.py  Dockerfile  build.sh  engine.py  game_rule.py  minimaxAgent.py
src/engine_alphabeta/cpp/: embadded_board.h  interface.cpp  interface.h  self-play.cpp  test-2.cpp
src/engine_alphabeta/cpp/engine/: action.cpp  action.h  board.cpp  board.h  embadded_board.cpp  gameboard.h  piece.cpp  position.h
src/engine_alphabeta/cpp/graph_board_old/: build_from_graph.cpp
src/engine_cpp/: action.cpp  action.h  board.cpp  board.h  direction.cpp  engine.cpp  engine.h  enums.cpp  enums.h  piece.cpp  piece.h  position.cpp  search_dll.py
src/engine_cpp/agents/: mcts.py  minimax.py  random_strat.py  strategy.py
src/engine_py/: board.py  game.py
src/folddds/: board_2.cpp  board_2.h
src/game_logic/: board.py
src/game_logic_py/: game.py
src/goodEngine/: Test_agent.ipynb  Untitled.ipynb  engine.py  engineGame.ipynb  game_rule.py  game_rule_reduced.py  minimaxAgent.py  randomAgent.py  test-Copy1.ipynb  test.ipynb  test.py
src/goodEngine/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/goodEngine/cpp/: CMakeLists.txt  Makefile  build_from_graph.cpp  build_from_graph.h  embadded_board.cpp  embadded_board.h  gemeboard_getter.cpp.old  graph_board.cpp  graph_board.h  interface.cpp  interface.h  interface_reduced.cpp  test  test-1.cpp  test-2.cpp  test-fast  test.cpp  test3.cpp
src/goodEngine/cpp/engine/: action.cpp  action.h  board.cpp  board.h  direction.cpp  direction.h  embadded_board.h  engine_interface.h.old  enums.cpp  enums.h  gameboard.cpp  gameboard.h  piece.cpp  piece.h  position.cpp  position.h
src/goodEngine/cpp/graph_board/: build_from_graph.cpp  build_from_graph.h  graph_board.cpp  graph_board.h  update_board.cpp  update_board.h
src/goodEngine/cpp/graph_board_old/: build_from_graph.h  graph_board.cpp  graph_board.h  update_board.cpp
src/goodEngine/cpp/mcts/: CMakeLists.txt  args.h  mcts.cpp  mcts.h  node.cpp  node.h  test.cpp
src/logic_cpp/: action.cpp  action.h  board.cpp  board.h  boardInterface.py  bug.h  direction.cpp  direction.h  engine.cpp  engine.py  engineInterface.py  enums.cpp  enums.h  find_functions_dll.py  gameboard.cpp  gameboard.h  piece.cpp  piece.h  position.cpp  position.h
src/logic_cpp/agents/: mcts.py
src/logic_cpp/game_logic/: board.py
src/logic_cpp/utils/: action.cpp  position.cpp
src/old_engine/: engine.py
src/old_engine_py/: engine.py
src/old_engine_py/agents/: oracle.py
src/old_engine_py/game_logic/: board.py
src/ours/: board.py  commands.py  engine.py  piece.py  position.py  random.py  strategy.py
src/pyth/agents/: mcts.py  strategy.py
